# ProgettoFinaleScacchiera

./: .gitignore  CMakeLists.txt  README.md  readme.txt  test.cpp  test.h  testColla.cpp
include/: board.h  bot.h  chessman.h  replay.h
include/log/: logger.h  logtoolkit.h
src/: bishop.cpp  board.cpp  bot.cpp  chessman.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  replay.cpp  rook.cpp  scacchiera.cpp  test.cpp  testconversione.cpp  testsus.cpp
src/exceptions/: NoMatchFound.hpp
src/include/: bishop.h  bishop.hpp  board.cpp  board.h  board.hpp  bot.h  bot.hpp  chessman.h  chessman.hpp  king.h  knight.h  knight.hpp  pawn.h  queen.h  replay.cpp  replay.h  rook.h  rook.hpp
src/include/graphic/: graphic.h  replay_game.interface
src/include/log/: logger.cpp  logger.h  logger.hpp  logtoolkit.cpp  logtoolkit.h  logtoolkit.hpp
src/include/match/: bot.cpp  bot.hpp  computer.hpp  match.hpp  player.h  player.hpp  user.hpp
src/include/runnable/: replay.h
